--- a/dashboard-shell/package.json
+++ b/dashboard-shell/package.json
@@ -3,12 +3,21 @@
   "version": "0.0.0",
   "description": "Application Shell to bring other life applications together",
   "scripts": {
+    "start": "webpack --watch",
+    "serve": "serve dist -p 3001",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jason Lloyd",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^4.3.0",
     "webpack": "5.0.0-beta.16",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "serve": "^11.3.1"
   }
 }
