--- a/dashboard-shell/package.json
+++ b/dashboard-shell/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@life-dashboard/dashboard",
   "version": "0.0.0",
+  "private": true,
   "description": "Application Shell to bring other life applications together",
   "scripts": {
-    "start": "webpack --watch",
-    "serve": "serve dist -p 3001",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jason Lloyd",
@@ -15,9 +16,11 @@
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^4.3.0",
     "webpack": "5.0.0-beta.16",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "serve": "^11.3.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
