Add typescript and babel preset

--- a/dashboard-shell/package.json
+++ b/dashboard-shell/package.json
@@ -20,7 +20,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.10.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "typescript": "^3.9.3"
   }
 }
