--- a/package.json
+++ b/package.json
@@ -1,3 +1,29 @@
 {
-  "private": true
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
+  "name": "life-dashboard",
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.10.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
+    "html-webpack-plugin": "^4.3.0",
+    "lerna": "^3.22.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "typescript": "^3.9.3",
+    "webpack": "5.0.0-beta.16",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "@life-dashboard/dashboard": "file:packages/dashboard-shell",
+    "@life-dashboard/ui-components": "file:packages/ui-components"
+  }
 }
