--- a/packages/dashboard-shell/package.json
+++ b/packages/dashboard-shell/package.json
@@ -12,21 +12,7 @@
   "author": "Jason Lloyd",
   "license": "MIT",
   "devDependencies": {
-    "webpack-cli": "^3.3.11",
-    "@babel/core": "^7.8.6",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.10.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "typescript": "^3.9.3",
-    "webpack": "5.0.0-beta.16",
-    "webpack-dev-server": "^3.11.0",
-    "css-loader": "^3.5.3"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "css-loader": "^3.5.3",
