--- a/packages/finance-dashboard/package.json
+++ b/packages/finance-dashboard/package.json
@@ -10,6 +10,10 @@
   "devDependencies": {
     "webpack-cli": "^3.3.11"
   },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
