Use exchangeRate api to convert USD to EURO

--- a/packages/finance-api/package.json
+++ b/packages/finance-api/package.json
@@ -11,7 +11,8 @@
     "degiro": "jaslloyd/degiro#master",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
