--- a/packages/finance-dashboard/package.json
+++ b/packages/finance-dashboard/package.json
@@ -11,7 +11,9 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1"
   },
   "keywords": [],
