--- a/packages/finance-dashboard/package.json
+++ b/packages/finance-dashboard/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "@life-dashboard/finance-dashboard",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "build": "webpack --env.production",
-    "start": "webpack-dev-server --open --env.development",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "webpack-cli": "^3.3.11"
-  },
-  "dependencies": {
-    "chart.js": "^2.9.3",
-    "react": "^16.13.1",
-    "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.13.1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "@life-dashboard/finance-dashboard",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "build": "webpack --env.production",
+        "tsc": "tsc",
+        "start": "webpack-dev-server --open --env.development",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "webpack-cli": "^3.3.11"
+    },
+    "dependencies": {
+        "chart.js": "^2.9.3",
+        "react": "^16.13.1",
+        "react-chartjs-2": "^2.9.0",
+        "react-dom": "^16.13.1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
