--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "prettier": "prettier --write ."
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.10.1",
-    "@types/react": "^16.9.35",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.6.0",
+    "css-loader": "^4.2.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react": "^7.20.6",
     "html-webpack-plugin": "^4.3.0",
-    "lerna": "^3.22.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "lerna": "^3.22.1",
+    "mini-css-extract-plugin": "^0.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.3",
-    "webpack": "5.0.0-beta.16",
-    "webpack-cli": "^3.3.11",
+    "typescript": "^4.0.2",
+    "webpack": "^5.0.0-beta.28",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
