--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "typescript": "^4.0.2",
-    "webpack": "^5.0.0-beta.28",
-    "webpack-cli": "^3.3.12",
+    "webpack": "5.0.0-beta.16",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
