--- a/packages/finance-dashboard/package.json
+++ b/packages/finance-dashboard/package.json
@@ -12,10 +12,12 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@xstate/react": "^1.0.1",
     "chart.js": "^2.9.3",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "xstate": "^4.13.0"
   },
   "keywords": [],
   "author": "",
